Updated to Java 21, more optimal JVM options